--- a/package.json
+++ b/package.json
@@ -7,7 +7,21 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.14.0",
+    "bcrypt": "^6.0.0",
+    "connect-pg-simple": "^10.0.0",
+    "dotenv": "^17.2.1",
     "express": "^4.21.2",
-    "socket.io": "^4.8.1"
+    "express-session": "^1.18.2",
+    "nodemailer": "^7.0.5",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.8.1",
+    "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.14.0"
   }
 }
