--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
   "name": "chat-internacional",
   "version": "1.0.0",
-  "description": "Site de chat internacional com salas por país e restrição 18+",
+  "description": "Verbi",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "npx prisma migrate deploy && node server.js",
+    "postinstall": "npx prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^6.14.0",
-    "bcrypt": "^6.0.0",
-    "connect-pg-simple": "^10.0.0",
-    "dotenv": "^17.2.1",
-    "express": "^4.21.2",
-    "express-session": "^1.18.2",
-    "nodemailer": "^7.0.5",
+    "@prisma/client": "^5.14.0",
+    "bcrypt": "^5.1.1",
+    "connect-pg-simple": "^9.0.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.8.1",
-    "uuid": "^11.1.0"
+    "socket.io": "^4.7.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "prisma": "^6.14.0"
+    "prisma": "^5.14.0"
   }
 }
