--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Site de chat internacional com salas por país e restrição 18+",
   "main": "server.js",
   "scripts": {
-    "start": "npx prisma migrate deploy && node server.js",
-    "postinstall": "npx prisma generate"
+    "start": "npx prisma generate && npx prisma migrate deploy && node server.js"
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
