--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "prisma:generate": "npx prisma generate",
     "prisma:migrate": "npx prisma migrate deploy",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "NODE_ENV=development node server.js"
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
