--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,33 @@
-node_modules
-# Keep environment variables out of version control
-.env
+# Node modules
+node_modules/
+npm-debug.log
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-/generated/prisma
+# Build output
+dist/
+build/
+.cache/
+.next/
+out/
+
+# Local environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Logs
+logs/
+*.log
+*.log.*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Prisma
+prisma/dev.db
+prisma/*.db-journal
