Corrige o AppIdentifier da lousa

--- a/agora-app-builder/verbi/config.json
+++ b/agora-app-builder/verbi/config.json
@@ -75,7 +75,7 @@
   "ENABLE_WAITING_ROOM": false,
   "ENABLE_WAITING_ROOM_AUTO_APPROVAL": false,
   "ENABLE_WAITING_ROOM_AUTO_REQUEST": false,
-  "WHITEBOARD_APPIDENTIFIER": "Verbi",
+  "WHITEBOARD_APPIDENTIFIER": "fe8f70c4f818495c9a58a743b6faaa74",
   "WHITEBOARD_REGION": "us-sv",
   "DISABLE_LANDSCAPE_MODE": true,
   "ENABLE_CONVERSATIONAL_AI": false,
