feat: Implementa sistema de verificação de e-mail e muito mais

--- a/agora-app-builder/verbi/config.json
+++ b/agora-app-builder/verbi/config.json
@@ -10,8 +10,8 @@
   "PSTN": false,
   "PRECALL": true,
   "CHAT": false,
-  "CHAT_ORG_NAME": "Verbi.com.br",
-  "CHAT_APP_NAME": "Verbi",
+  "CHAT_ORG_NAME": "411387839",
+  "CHAT_APP_NAME": "1592554",
   "CHAT_URL": "",
   "CLOUD_RECORDING": false,
   "CLOUD_RECORDING_AUTO_START": false,
@@ -75,7 +75,7 @@
   "ENABLE_WAITING_ROOM": false,
   "ENABLE_WAITING_ROOM_AUTO_APPROVAL": false,
   "ENABLE_WAITING_ROOM_AUTO_REQUEST": false,
-  "WHITEBOARD_APPIDENTIFIER": "fe8f70c4f818495c9a58a743b6faaa74",
+  "WHITEBOARD_APPIDENTIFIER": "ca66sH7MEfCwKrcQj8VaJw/AGrZRvn0Fp0rGQ",
   "WHITEBOARD_REGION": "us-sv",
   "DISABLE_LANDSCAPE_MODE": true,
   "ENABLE_CONVERSATIONAL_AI": false,
