--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "@sendgrid/mail": "^8.1.5",
     "agora-token": "^2.0.5",
     "bcrypt": "^5.1.1",
     "connect-pg-simple": "^9.0.1",
