--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "dev": "NODE_ENV=development node server.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.14.0",
+    "@faker-js/faker": "^10.0.0",
+    "@google/generative-ai": "^0.24.1",
+    "@prisma/client": "^5.22.0",
     "@sendgrid/mail": "^8.1.5",
     "agora-token": "^2.0.5",
     "bcrypt": "^5.1.1",
     "connect-pg-simple": "^9.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "nodemailer": "^6.10.1",
+    "openai": "^5.16.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
